2023-02-18T16:24:52.229Z |            1.9.2 | Aggiunta proprietà `bin` al package.json
2023-02-18T17:02:04.378Z |            1.9.3 | Update-version: gestione errori package.json
2023-02-18T18:11:42.581Z |            1.9.4 | Update-version: fix
2023-03-09T15:25:57.266Z |            1.9.5 | Cambio lunghezza elementi file di log
2023-03-16T18:29:35.669Z |           1.10.0 | upd@m
2023-03-16T18:35:29.251Z |           1.10.1 | fix
2023-03-16T20:58:13.190Z |           1.10.2 | Fix
2023-03-16T21:10:58.632Z |           1.10.3 | Update `upd@m`
2023-03-17T17:31:53.152Z |           1.10.4 | upd@m: aggiunta flag `--save` a `npm update`
2023-03-17T18:06:44.332Z |           1.11.0 | Update-version: aggiunta opzione per avvio nuovi progetti
2023-03-20T09:27:40.000Z |           1.12.0 | vscode custom properties list
2023-03-20T17:26:51.925Z |           1.12.1 | vscode custom properties list upd
2023-03-20T21:06:22.956Z |           1.12.2 | upd@m: aggiunta numero versione nel riepilogo
2023-03-21T21:14:54.087Z |           1.12.3 | fix
2023-03-21T21:31:52.633Z |           1.12.4 |
2023-04-10T10:46:17.376Z |           1.12.5 | update-version fix
2023-05-27T17:50:06.523Z |           1.13.0 | create-favicons
2023-05-27T17:53:56.680Z |           1.13.1 | fix
2023-05-29T10:15:31.419Z |           1.14.0 | create-favicon: init option
2023-05-29T10:31:21.507Z |           1.15.0 | create-favicons: multi set
2023-05-29T10:38:09.535Z |           1.15.1 | fix create-favicon shebang
2023-05-29T10:42:50.764Z |           1.15.2 | fix
2023-05-29T13:05:01.999Z |           1.15.3 | fix
2023-05-29T13:39:40.036Z |           1.15.4 | create-favicons fix
2023-05-29T14:31:22.411Z |           1.16.0 | create-favicons: opzione `null` per snippet file
2023-05-29T18:31:40.550Z |           1.16.1 | upd
2023-05-30T09:17:02.151Z |           1.16.2 | Create-favicons: personalizzazione parametri output
2023-05-30T10:20:45.158Z |           1.16.3 | create-favicons: defaults update